    the local filename encoding.
  * "DB_ENV.log_prinf()" requires a bytes object not containing '\0'.
  * The "DB_ENV.lock_get()" name can not be None.
  * "DB_ENV.set_re_pad()" param must be bytes or integer.
  * "DB_ENV.get_re_pad()" returns bytes.
  * "DB_ENV.set_re_delim()" param must be bytes or integer.
  * "DB_ENV.get_re_delim()" returns bytes.

6.2.7:
  * Update copyright notices.
  * https links.
  * Fix Python 3 deprecation warning.
    Notified by Arthur Gautier.
  * Fix compilation Python 3.8 deprecation warnings.
  * Fix compilation Python 3.9 deprecation warnings.
  * Python 3.8 and 3.9 are explicitly supported.

6.2.6:
  * Correctly detect Berkeley DB when installed via Homebrew on Mac OS X.
    Patch by Matthew Peveler.
  * Python 3.6 and 3.7 are explicitly supported.

6.2.5:
  * We should be able to install inside a PYPY virtualenv.
    Reported by Zhihao Yuan.

6.2.4:
  * More complete fix for pkgsrc.

6.2.3:
  * Update copyright notices.
  * Solve a conflict between different installations of Berkeley DB
    on some pkgsrc configurations.

6.2.2:
  * Correctly detect Berkeley DB installations in SmartOS native zones.
  * "Probably" (not tested) correctly detect Berkeley DB in pkgsrc systems.

6.2.1:
  * Correctly detect Berkeley DB installations in modern 64 bits Debians.

6.2.0:
  * Support Berkeley DB 6.2.x.
  * Declare Python 3.5 support for PyPI.
  * Drop support for Python 3.2. If you need
    compatibility with that version, you can keep using
    old releases of these bindings.
  * Drop support for Berkeley DB 5.0, 5.2 and 6.0. If you need
    compatibility with those versions, you can keep using old
    releases of these bindings.

6.1.1:
  * Compatibility with Python 3.5.
  * Code cleanup after dropping Python 2.4/2.5 support.
  * PGP key changed.
  * Support for DB_FORCESYNCENV flag in "DB_ENV.close()".
  * Support for DB_LOG_NOSYNC flag in "DB_ENV.log_set_config()".
  * Fix tests under Windows. See https://bugs.python.org/issue22943 .